--- a/package.json
+++ b/package.json
@@ -13,12 +13,16 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "@headlessui/vue": "^1.7.23",
+    "@vue/compiler-sfc": "^3.5.13",
     "axios": "^1.7.7",
-    "vue": "^3.5.12",
+    "pinia": "^2.3.0",
+    "vue": "^3.5.13",
     "vue-router": "^4.4.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.14.0",
+    "@tailwindcss/forms": "^0.5.9",
     "@vitejs/plugin-vue": "^5.1.4",
     "@vitest/eslint-plugin": "1.1.7",
     "@vue/eslint-config-prettier": "^10.1.0",
