--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@popperjs/core": "^2.11.8",
     "@vue/compiler-sfc": "^3.5.13",
     "axios": "^1.7.7",
+    "maska": "^3.0.4",
     "pinia": "^2.3.0",
     "v-calendar": "^3.1.2",
     "vue": "^3.5.13",
